--- a/style.css
+++ b/style.css
@@ -1,467 +1,400 @@
 
 
         /* Style pour centrer la page et garantir que le footer est en bas */
-    html, body {
-        height: 100%;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
-    }
-
-
-        /* Conteneur principal centré */
-    .container {
-        flex: 1;
-        width: 80%;
-        max-width: 1200px;
-        background-color: #fff;
-        padding: 20px;
-        box-shadow: 0 0 10px #0000001a;
-        margin: 0 auto;
-    }
-
-
-        /* Style pour le menu */
-    nav {
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-start;
-        gap: 8px;
-        height: 32px;
-    }
-    nav text {
-        padding: 8px;
-        border-radius: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
-        color: #1E1E1E;
-        font-size: 16px;
-        font-family: Inter;
-        font-weight: 400;
-        line-height: 16px;
-    }
-    nav a {
-        margin: 0 1rem;
-        text-decoration: none;
-        color: #1E1E1E;
-        font-weight: bold;
-        transition: color 0.3s;
-        cursor: pointer;
-    }
-    nav a:hover {
-        background: #B4583C;
-        padding: 5px;
-        border-radius: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-
-        /* Style pour le titre */
-    .title {
-        width: 1135px;
-        height: 424px;
-        background: linear-gradient(180deg, #b4583c8c 18%, #bf735b82 35%, #d19e8c70 81%, #e2c9bd5e 99%, #f4f4ee4d 100%);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        margin: 0 auto;
-        padding: 0;
-    }
-    h1 {
-        color: #1E1E1E;
-        font-size: 48px;
-        font-family: Inter;
-        font-weight: 700;
-        word-wrap: break-word;
-    }
-    h3 {
-        color: #757575;
-        font-size: 32px;
-        font-family: Inter;
-        font-weight: 400;
-        line-height: 38.4px;
-        word-wrap: break-word;
-    }
-
-
-        /* Style pour la présentation de l'expo */
-    .quote {
-        width: 100%;
-        max-width: 1179px;
-        height: 400px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .quote img {
-        max-width: 100%;
-        height: auto;
-    }
-
-
-     /* Style pour chaque slider */
-    .slider {
-        position: relative;
-        width: 550px;
-        height: 400px;
-        overflow: hidden;
-        margin-bottom: 20px;
-    }
-
-    .slide {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        transition: opacity 0.5s ease-in-out;
-    }
-
-    .slide.active {
-        opacity: 1;
-    }
-
-    .images {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 20px;
-    }
-    .responsive-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    .button {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #00000080;
-        color: #fff;
-        font-size: 24px;
-        border: none;
-        padding: 10px;
-        cursor: pointer;
-    }
-
-    .prev {
-        left: 10px;
-    }
-
-    .next {
-        right: 10px;
-    }
-
-    .slider-description {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 16px;
-    color: #444;
-    font-style: italic;
-}
-
-.images-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px; 
-    margin-top: 20px;
-}
-
-        /* Styles de la section contact*/
-    #contact h1 {
-        border-bottom: 3px solid #B4583C;
-        padding-bottom: 10px;
-    }
-
-
-    .contact-container {
-        display: flex;
-        gap: 20px;
-        margin: 20px;
-    }
-
-
-    .contact-left, .contact-right {
-        flex: 1;
-    }
-   
-    .contact-left {
-        padding-right: 20px;
-        padding-top: 100px;
-        text-align: center;
-        flex: 1;
-        align-items: center;
-    }
-   
-    .contact-right form {
-        display: flex;
-        flex-direction: column;
-    }
-   
-    .contact-right input,
-    .contact-right textarea {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 8px;
-        border: 1px solid #cccccc;
-        border-radius: 4px;
-    }
-   
-    .contact-right button {
-        background-color: #B4583C;
-        color: #ffffff;
-        border: none;
-        padding: 10px;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-   
-    .contact-right button:hover {
-        background-color: #9e4f2a;
-    }
-   
-        /*Styles de la section exposition*/
-    #exposition h1{
-        border-bottom: 3px solid #B4583C;
-        padding-bottom: 10px;
-    }
-    #exposition p{
-        font-size: 20px;
-    }
-    .photo-gallery {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
-
-
-    .row {
-        display: flex;
-        justify-content: space-between;
-        gap: 10px;
-    }
-
-
-    .image-container {
-        position: relative;
-        flex: 1;
-        overflow: hidden;
-    }
-
-
-    .image-container img {
-        width: 100%;
-        height: 250px;
-        object-fit: cover;
-    }
-
-
-    .image-description {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        padding: 10px;
-        background-color: #b4583cb7;
-        color: #fff;
-        text-align: center;
-        font-size: 14px;
-        display: none;
-    }
-
-
-    .image-container:hover .image-description {
-        display: block;
-    }
-   
-   
-        /* Styles du footer */
-    footer {
-        width: 77%;
-        background-color: #333;
-        color: #ffffff;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px 40px;
-        margin: 0 auto;
-    }
-
-
-    .footer-logos {
-        display: flex;
-        justify-content: flex-start;
-        gap: 20px;
-    }
-
-
-    .footer-logos img {
-        width: 23px;
-        height: auto;
-    }
-
-
-    .newsletter {
-        text-align: center;
-        flex: 1;
-    }
-
-
-    .newsletter h3 {
-        color: #fff;
-        font-size: 24px;
-        margin-bottom: 10px;
-    }
-
-
-    .newsletter input[type="email"] {
-        padding: 10px;
-        width: 250px;
-        border: none;
-        border-radius: 5px;
-        margin-right: 10px;
-    }
-
-
-    .newsletter button {
-        padding: 10px 20px;
-        background-color: #B4583C;
-        border: none;
-        border-radius: 5px;
-        color: #ffffff;
-        cursor: pointer;
-        font-size: 16px;
-    }
-
-
-    .newsletter button:hover {
-        background-color: #9e4f2a;
-    }
-
-
-    .hidden {
-        display: none;
-    }
-   
-   
-        /* Media Queries */
-
-
-    /* Pour les petits écrans (tablettes) */
-    @media (max-width: 768px) {
+        html, body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+    
+    
+            /* Conteneur principal centré */
         .container {
-            width: 100%;
-            padding: 10px;
-        }
-
-
-        .title {
+            flex: 1;
+            width: 80%;
+            max-width: 1200px;
+            background-color: #fff;
             padding: 20px;
+            box-shadow: 0 0 10px #0000001a;
+            margin: 0 auto;
         }
-
-
-        h1 {
-            font-size: 36px;
+    
+    
+            /* Style pour le menu */
+        nav {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-start;
+            gap: 8px;
+            height: 32px;
         }
-
-
-        h3 {
-            font-size: 24px;
-        }
-
-
-        .slider {
-            max-width: 100%;
-            height: 300px;
-        }
-
-
-        .quote {
-            height: 250px;
-        }
-
-
-        .footer-logos {
-            flex-wrap: wrap;
+        nav text {
+            padding: 8px;
+            border-radius: 8px;
+            display: flex;
             justify-content: center;
+            align-items: center;
+            gap: 8px;
+            color: #1E1E1E;
+            font-size: 16px;
+            font-family: Inter;
+            font-weight: 400;
+            line-height: 16px;
         }
-
-
-        .footer-logos img {
-            width: 30px;
-            margin-bottom: 10px;
+        nav a {
+            margin: 0 1rem;
+            text-decoration: none;
+            color: #1E1E1E;
+            font-weight: bold;
+            transition: color 0.3s;
+            cursor: pointer;
         }
-
-
-        .newsletter {
+        nav a:hover {
+            background: #B4583C;
+            padding: 5px;
+            border-radius: 8px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    
+    
+            /* Style pour le titre */
+        .title {
+            width: 1135px;
+            height: 250px;
+            background: #B4583C;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            margin: 0 auto;
+            padding: 0;
+        }
+        h1 {
+            color: #1E1E1E;
+            font-size: 48px;
+            font-family: Inter;
+            font-weight: 700;
+           
+        }
+        h3 {
+            color: #CBB7A5;
+            font-size: 32px;
+            font-family: Inter;
+            font-weight: 400;
+            line-height: 38.4px;  
+        }
+    
+    
+            /* Style pour la présentation de l'expo */
+        .quote {
             width: 100%;
+            max-width: 1179px;
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .quote img {
+            max-width: 100%;
+            height: auto;
+        }
+    
+    
+            /* Style pour chaque slider */
+        .slider {
+            position: relative;
+            width: 550px;
+            height: 400px;
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        .slide {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+        .slide.active {
+            opacity: 1;
+        }
+        .images {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .responsive-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: #00000080;
+            color: #fff;
+            font-size: 24px;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+        }
+        .prev {
+            left: 10px;
+        }
+        .next {
+            right: 10px;
+        }
+        .slider-description {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 16px;
+            color: #444;
+            font-style: italic;
+        }
+        .images-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
             margin-top: 20px;
         }
-
-
-        .newsletter input[type="email"] {
+    
+    
+            /* Styles de la section boutique*/
+        #boutique h1 {
+            border-bottom: 3px solid #B4583C;
+            padding-bottom: 10px;
+        }
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+            text-align: center;
+        }  
+        .product img {
             width: 100%;
-            margin-bottom: 10px;
-        }
-
-
-        .newsletter button {
-            width: 100%;
-        }
-    }
-
-
-
-
-    /* Pour les très petits écrans (smartphones) */
-    @media (max-width: 480px) {
-        .title {
-            padding: 15px;
-        }
-
-
-        .quote {
-            height: 200px;
-        }
-
-
-        .slider {
             max-width: 100%;
-            height: 250px;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px #0000001a;
+        }  
+        .product-description {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #555;
         }
-
-
-        h1 {
-            font-size: 28px;
+    
+    
+    
+    
+            /*Styles de la section exposition*/
+        #exposition h1{
+            border-bottom: 3px solid #B4583C;
+            padding-bottom: 10px;
         }
-
-
-        h3 {
+        #exposition p{
             font-size: 20px;
         }
-
-
+        .photo-gallery {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+        .row {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+        }
+        .image-container {
+            position: relative;
+            flex: 1;
+            overflow: hidden;
+        }
+        .image-container img {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+        }
+        .image-description {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 10px;
+            background-color: #b4583cb7;
+            color: #fff;
+            text-align: center;
+            font-size: 14px;
+            display: none;
+        }
+        .image-container:hover .image-description {
+            display: block;
+        }
+       
+            /* Styles de la section contact*/
+        #contact h1 {
+            border-bottom: 3px solid #B4583C;
+            padding-bottom: 10px;
+        }
+        .contact-container {
+            display: flex;
+            gap: 20px;
+            margin: 20px;
+        }
+        .contact-left, .contact-right {
+            flex: 1;
+        }
+        .contact-left {
+            padding-right: 20px;
+            padding-top: 100px;
+            text-align: center;
+            flex: 1;
+            align-items: center;
+        }
+        .contact-right form {
+            display: flex;
+            flex-direction: column;
+        }
+        .contact-right input,
+        .contact-right textarea {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 8px;
+            border: 1px solid #cccccc;
+            border-radius: 4px;
+        }
+        .contact-right button {
+            background-color: #B4583C;
+            color: #ffffff;
+            border: none;
+            padding: 10px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .contact-right button:hover {
+            background-color: #9e4f2a;
+        }
+             
+            /* Styles du footer */
+        footer {
+            width: 77%;
+            background-color: #f7f1f1;
+            color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 40px;
+            margin: 0 auto;
+        }
+        .footer-logos {
+            display: flex;
+            justify-content: flex-start;
+            gap: 20px;
+        }
         .footer-logos img {
-            width: 25px;
-            margin-bottom: 5px;
+            width: 23px;
+            height: auto;
         }
-
-
+        .newsletter {
+            text-align: center;
+            flex: 1;
+        }
+        .newsletter h3 {
+            color: #333;
+            font-size: 24px;
+            margin-bottom: 10px;
+        }
         .newsletter input[type="email"] {
-            width: 100%;
+            padding: 10px;
+            width: 250px;
+            border: none;
+            border-radius: 5px;
+            margin-right: 10px;
         }
-
-
         .newsletter button {
-            width: 100%;
+            padding: 10px 20px;
+            background-color: #B4583C;
+            border: none;
+            border-radius: 5px;
+            color: #ffffff;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .newsletter button:hover {
+            background-color: #9e4f2a;
+        }
+        .hidden {
+            display: none;
+        }
+       
+    
+    
+    
+    
+    
+    
+    
+    
+        /*test*/
+       
+        /* Média Queries */
+    @media (max-width: 768px) {
+     
+        header nav a {
+            font-size: 16px;
+            padding: 5px 0;
+        }
+    
+    
+        .photo-gallery {
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        }
+    
+    
+        .contact-container {
+            flex-direction: column;
+        }
+    
+    
+        footer {
+            flex-direction: column;
+        }
+    
+    
+        .newsletter {
+            text-align: center;
+            margin-top: 10px;
+        }
+    
+    
+        .product-grid {
+            grid-template-columns: 1fr;
+        }
+    
+    
+        .images-grid {
+            grid-template-columns: 1fr;
+            margin: auto;
+            width: fit-content;
+        }
+    
+    
+        .title{
+            margin: auto;
+            width: auto;
         }
     }
-
-
-
+    
+    
+    
+    
+    
+    
+    
+    
