--- a/style.css
+++ b/style.css
@@ -386,8 +386,8 @@
     
     
         .title{
-            margin: auto;
-            width: auto;
+             width: 567px;
+             height: 125px;
         }
     }
     
