--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@
             font-weight: 700;
            
         }
-        h3 {
-            color: #CBB7A5;
+        h2 {
+            color: #dfd4cb;
             font-size: 32px;
             font-family: Inter;
             font-weight: 400;
